kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-cicd-react-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      run: kube-cicd-react
  template:
    metadata:
      labels:
        run: kube-cicd-react
    spec:
      containers:
      - image: gcr.io/exec-tut-cicd-kubernetes-react/kube-cicd-react:COMMIT_SHA
        imagePullPolicy: IfNotPresent
        name: kube-cicd-react
        ports:
        - containerPort: 3000
          protocol: TCP
