kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-cicd-react-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: kube-cicd-react
  type: LoadBalancer
